creusot/tests/should_fail/bug/869.coma

module M_869__unsound [#"../869.rs" 4 0 4 16]
  let%span s8690 = "../869.rs" 5 32 5 50
  let%span s8691 = "../869.rs" 10 44 10 59
  let%span s8692 = "../869.rs" 11 20 11 50
  let%span s8693 = "../869.rs" 17 20 17 53
  let%span s8694 = "../869.rs" 18 12 18 64
  let%span s8695 = "../869.rs" 19 20 19 37
  let%span s8696 = "../869.rs" 20 20 20 37
  let%span span7 = "../../../../../creusot-contracts/src/resolve.rs" 41 20 41 34
  
  use prelude.prelude.Snapshot
  
  use prelude.prelude.Borrow
  
  use prelude.prelude.Intrinsic
  
  use prelude.prelude.Snapshot
  
  use prelude.prelude.Snapshot
  
  use prelude.prelude.Snapshot
  
  predicate resolve'1 (self : borrowed (Snapshot.snap_ty bool)) =
    [%#span7] self.final = self.current
  
  predicate resolve'0 (_1 : borrowed (Snapshot.snap_ty bool)) =
    resolve'1 _1
  
  use prelude.prelude.Snapshot
  
  meta "compute_max_steps" 1000000
  
  let rec unsound (_1:()) (return'  (ret:()))= (! bb0
    [ bb0 = s0 [ s0 =  [ &x <- [%#s8690] Snapshot.new true ] s1 | s1 = bb1 ] 
    | bb1 = s0
      [ s0 = Borrow.borrow_mut <Snapshot.snap_ty bool> {x}
          (fun (_ret':borrowed (Snapshot.snap_ty bool)) ->  [ &_4 <- _ret' ]  [ &x <- _4.final ] s1)
      | s1 = Borrow.borrow_final <Snapshot.snap_ty bool> {_4.current} {Borrow.get_id _4}
          (fun (_ret':borrowed (Snapshot.snap_ty bool)) ->
             [ &xm <- _ret' ] 
             [ &_4 <- { _4 with current = xm.final ; } ] 
            s2)
      | s2 = -{resolve'0 _4}- s3
      | s3 = Borrow.borrow_mut <Snapshot.snap_ty bool> {xm.current}
          (fun (_ret':borrowed (Snapshot.snap_ty bool)) ->
             [ &_6 <- _ret' ] 
             [ &xm <- { xm with current = _6.final ; } ] 
            s4)
      | s4 = Borrow.borrow_final <Snapshot.snap_ty bool> {_6.current} {Borrow.get_id _6}
          (fun (_ret':borrowed (Snapshot.snap_ty bool)) ->
             [ &b <- _ret' ] 
             [ &_6 <- { _6 with current = b.final ; } ] 
            s5)
      | s5 = -{resolve'0 b}- s6
      | s6 = -{resolve'0 _6}- s7
      | s7 =  [ &bg <- [%#s8691] Snapshot.new b ] s8
      | s8 = bb2 ]
      
    | bb2 = s0
      [ s0 = {[@expl:assertion] [%#s8692] Snapshot.inner (Snapshot.inner bg).current = true
        /\ Snapshot.inner (Snapshot.inner bg).final = true}
        s1
      | s1 = Borrow.borrow_final <Snapshot.snap_ty bool> {xm.current} {Borrow.get_id xm}
          (fun (_ret':borrowed (Snapshot.snap_ty bool)) ->
             [ &_12 <- _ret' ] 
             [ &xm <- { xm with current = _12.final ; } ] 
            s2)
      | s2 = Borrow.borrow_final <Snapshot.snap_ty bool> {_12.current} {Borrow.get_id _12}
          (fun (_ret':borrowed (Snapshot.snap_ty bool)) ->
             [ &evil <- _ret' ] 
             [ &_12 <- { _12 with current = evil.final ; } ] 
            s3)
      | s3 = -{resolve'0 _12}- s4
      | s4 = {[@expl:assertion] [%#s8693] (evil = Snapshot.inner bg) = (Snapshot.inner evil.final = true)} s5
      | s5 =  [ &_15 <- [%#s8694] Snapshot.new (if evil = Snapshot.inner bg then false else true) ] s6
      | s6 = bb3 ]
      
    | bb3 = s0
      [ s0 =  [ &evil <- { evil with current = _15 ; } ] s1
      | s1 = -{resolve'0 evil}- s2
      | s2 = -{resolve'0 xm}- s3
      | s3 = {[@expl:assertion] [%#s8695] Snapshot.inner evil.current = (not Snapshot.inner evil.final)} s4
      | s4 = {[@expl:assertion] [%#s8696] Snapshot.inner evil.current = (not Snapshot.inner evil.current)} s5
      | s5 = return' {_0} ]
       ]
    )
    [ & _0 : () = any_l ()
    | & x : Snapshot.snap_ty bool = any_l ()
    | & xm : borrowed (Snapshot.snap_ty bool) = any_l ()
    | & _4 : borrowed (Snapshot.snap_ty bool) = any_l ()
    | & b : borrowed (Snapshot.snap_ty bool) = any_l ()
    | & _6 : borrowed (Snapshot.snap_ty bool) = any_l ()
    | & bg : Snapshot.snap_ty (borrowed (Snapshot.snap_ty bool)) = any_l ()
    | & evil : borrowed (Snapshot.snap_ty bool) = any_l ()
    | & _12 : borrowed (Snapshot.snap_ty bool) = any_l ()
    | & _15 : Snapshot.snap_ty bool = any_l () ]
     [ return' (result:())-> (! return' {result}) ] 
end
